feat: Add 722.network domain name

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: all@722.network
 description: >- # this means to ignore newlines until "baseurl:"
   A group of friends hacking stuff together.
 baseurl: "/page" # the subpath of your site, e.g. /blog
-url: "https://722-network.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://722.network" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  722-network
 
 paginate: 10
